[tool.poetry]
name = "video-stutter-detector"
version = "0.1.0"
description = "A software project to detect stuttering in videos."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
numpy = "^1.21.0"
scipy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"