[metadata]
name = video-stutter-detector
version = 0.1.0
description = A software project to detect stuttering in videos.
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
install_requires =
    opencv-python
    numpy
    scipy
    matplotlib

[options.packages.find]
where = src