# ===============================================
# パッケージのメタデータ
# ===============================================
[metadata]
# プロジェクト名
name = video-stutter-detector
# バージョン番号
version = 0.1.0
# プロジェクトの説明
description = A software project to detect stuttering in videos.
# 作者名
author = Your Name
# 作者メールアドレス
author_email = your.email@example.com
# ライセンス情報
license = MIT

# ===============================================
# インストールオプション
# ===============================================
[options]
# パッケージを自動検索する設定
packages = find:
# このプロジェクトで必要な依存パッケージ
install_requires =
    opencv-python    # 動画処理用
    numpy            # 数値計算用
    scipy            # 科学計算・信号処理用
    matplotlib       # 可視化用

# ===============================================
# パッケージ検索の設定
# ===============================================
[options.packages.find]
# パッケージの検索対象ディレクトリ
where = src
